@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.dbpedia</groupId>
         <artifactId>extraction</artifactId>
-        <version>3.8</version>
+        <version>4.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.dbpedia.extraction</groupId>
@@ -30,20 +31,39 @@
                                 <jvmArg>-server</jvmArg>
                             </jvmArgs>
                             <args>
-                                <arg>/home/release/wikipedia</arg>
-                                <arg>/home/release/data/projects/mediawiki/core/maintenance/tables.sql</arg>
-                                <arg>localhost</arg><!-- MySQL host:port -->
-                                <arg>true</arg><!-- require-download-complete -->
-                                <arg>10000-</arg><!-- languages and article count ranges, comma-separated -->
+                                <!-- base folder of downloaded dumps -->
+                                <arg>/data/dbpedia-release/data</arg>
+                                <!-- location of SQL file containing MediaWiki table definitions  -->
+                                <arg>/home/dbpedia-release/bin/mediawiki/core/maintenance/tables.sql</arg>
+                                <!-- JDBC URL of MySQL server. Import creates a new database for each wiki. -->
+                                <arg>jdbc:mysql://localhost/?characterEncoding=UTF-8</arg>
+                                <!-- require-download-complete -->
+                                <arg>true</arg>
+                                <!-- file name: pages-articles.xml{,.bz2,.gz} -->
+                                <arg>pages-articles.xml.bz2</arg>
+                                <!-- languages and article count ranges, comma-separated, e.g. "de,en" or "@mappings" etc. -->
+                                <arg>10000-</arg>
                             </args>
                         </launcher>
 
                         <launcher>
                             <id>extraction</id>
                             <mainClass>org.dbpedia.extraction.dump.extract.Extraction</mainClass>
+
                             <jvmArgs>
                                 <jvmArg>-server</jvmArg>
-                                <jvmArg>-Xmx1024m</jvmArg>
+                                <!--
+                                <jvmArg>-Xmx4096m</jvmArg>
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
+                                <jvmArg>-Dhttp.proxyHost=proxy.server.com</jvmArg>
+                                <jvmArg>-Dhttp.proxyPort=80</jvmArg>
+                                <jvmArg>-Dhttp.proxyUser=user</jvmArg>
+                                <jvmArg>-Dhttp.proxyPassword=password</jvmArg>
+                                <jvmArg>-Dhttp.nonProxyHosts="localhost|127.0.0.1"</jvmArg>
+                                -->
                             </jvmArgs>
                         </launcher>
 
@@ -59,6 +79,15 @@
                         <launcher>
                             <id>download</id>
                             <mainClass>org.dbpedia.extraction.dump.download.Download</mainClass>
+                            <!--
+                            <jvmArgs>
+                                <jvmArg>-Dhttp.proxyHost=proxy.server.com</jvmArg>
+                                <jvmArg>-Dhttp.proxyPort=port</jvmArg>
+                                <jvmArg>-Dhttp.proxyUser=user</jvmArg>
+                                <jvmArg>-Dhttp.proxyPassword=password</jvmArg>
+                                <jvmArg>-Dhttp.nonProxyHosts="localhost|127.0.0.1"</jvmArg> 
+                             </jvmArgs>
+                             -->
                             <!-- ../run download config=download.properties -->
                         </launcher>
                         
@@ -96,11 +125,6 @@
         <dependency>
             <groupId>org.dbpedia.extraction</groupId>
             <artifactId>core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
         </dependency>
 
         <dependency>
