@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.dbpedia</groupId>
         <artifactId>extraction</artifactId>
-        <version>3.8</version>
+        <version>4.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.dbpedia.extraction</groupId>
@@ -20,71 +21,110 @@
                 <artifactId>maven-scala-plugin</artifactId>
 
                 <configuration>
-                    <!-- TODO configure a launcher for each script -->
                     <launchers>
                         <launcher>
-                            <id>ResolveRedirects</id>
-                            <mainClass>org.dbpedia.extraction.scripts.ResolveRedirects</mainClass>
+                            <id>CreateFlickrWrapprLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CreateFlickrWrapprLinks</mainClass>
                             <jvmArgs>
-                                <jvmArg>-Xmx4096m</jvmArg>
-                            </jvmArgs>
-                            <!-- ../run  ResolveRedirects /data/en/redirects_en.nt /data/en/mappingbased_properties_en.nt /data/en/page_links_en.nt -->
-                        </launcher>
-                        <launcher>
-                            <id>CreateFreebaseLinks</id>
-                            <mainClass>org.dbpedia.extraction.scripts.CreateFreebaseLinks</mainClass>
-                            <jvmArgs>
-                                <jvmArg>-Xms512m</jvmArg>
-                                <jvmArg>-Xmx4096m</jvmArg><!-- we load all DBpedia titles, so we need some space. Didn't test how much is actually necessary, 4G is probably too much. -->
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx4G</jvmArg>
                                 <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <!--
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
+                                -->
                             </jvmArgs>
-                            <!-- URIs and N-Triple escaping -->
-                            <!-- ../run CreateFreebaseLinks false false /data/dbpedia .nt.gz freebase-links.nt.bz2 freebase-datadump-quadruples.tsv.bz2 -->
-                            <!-- IRIs and Turtle escaping -->
-                            <!-- ../run CreateFreebaseLinks true true /data/dbpedia .ttl.gz freebase-links.nt.bz2 freebase-datadump-quadruples.tsv.bz2 -->
+                        </launcher>
+                        <launcher>
+                            <id>CreateIriSameAsUriLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CreateIriSameAsUriLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx1024m</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>ProcessFreebaseLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.ProcessFreebaseLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx1024m</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>WikipediaDumpSplitter</id>
+                            <mainClass>org.dbpedia.extraction.scripts.WikipediaDumpSplitter</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx4G</jvmArg>
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <!--
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
+                                -->
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>CreateIriSameAsUriLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CreateIriSameAsUriLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx1024m</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>ProcessFreebaseLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.ProcessFreebaseLinks</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx1024m</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
                         </launcher>
                         <launcher>
                             <id>ProcessInterLanguageLinks</id>
                             <mainClass>org.dbpedia.extraction.scripts.ProcessInterLanguageLinks</mainClass>
                             <jvmArgs>
-                                <jvmArg>-Xms5632m</jvmArg>
-                                <jvmArg>-Xmx6656m</jvmArg><!-- all languages (10000+ articles) need 5.5G (5632M) with .ttl and IRIs, 6.5G (6656M) with .nt and URIs (more and longer unique titles). -->
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xms5120m</jvmArg>
+                                <jvmArg>-Xmx7680m</jvmArg><!-- all languages (10000+ articles) need 6.5G (6656M) with .ttl and IRIs, 7.5G (7680M) with .nt and URIs (more and longer unique titles). -->
                                 <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
-                                <!-- <jvmArg>-XX:+PrintGC</jvmArg> -->
-                                <!-- <jvmArg>-XX:+PrintGCTimeStamps</jvmArg> -->
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
                             </jvmArgs>
-                            <!-- 'fr,de' mean specific languages. '-' means no language uses generic domain. -->
-                            <!-- '-fr-de' is file name part, full names are e.g. enwiki-20120601-interlanguage-links-same-as-fr-de.ttl.gz and enwiki-20120601-interlanguage-links-see-also-fr-de.ttl.gz -->
-                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links-fr-de.txt.gz -fr-de .ttl.gz - fr,de -->
-                            
-                            <!-- '10000-' means languages by article count range. 'en' uses generic domain. -->
-                            <!-- '-' means no file name part, full names are e.g. enwiki-20120601-interlanguage-links-same-as.ttl.gz -->
-                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links-ttl.txt.gz - .ttl.gz en 10000- -->
-                            
-                            <!-- '-' means don't write dump file. -->
-                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia - -fr-de .ttl.gz - fr,de -->
-                            
-                            <!-- if no languages are given, read links from dump file, not from triple files. -->
-                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links.txt.gz - .ttl.gz -->
-                            
-                            <!-- generate links for all DBpedia I18N chapters in nt format -->
-                            <!-- '-chapters' is file name part, full names are e.g. enwiki-20120601-interlanguage-links-same-as-chapters.ttl.gz -->
-                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links-chapters-nt.txt.gz -chapters .nt.gz en cs,en,fr,de,el,it,ja,ko,pl,pt,ru,es -->
-                            
-                            <!-- generate links for all languages that have a namespace on mappings.dbpedia.org in nt format -->
-                            <!-- '-mapped' is file name part, full names are e.g. enwiki-20120601-interlanguage-links-same-as-mapped.ttl.gz -->
-                            <!-- ../run ProcessInterLanguageLinks /data/dbpedia interlanguage-links-mapped-nt.txt.gz -mapped .nt.gz en @mappings -->
                         </launcher>
                         <launcher>
-                            <id>MapSubjectUris</id>
-                            <mainClass>org.dbpedia.extraction.scripts.MapSubjectUris</mainClass>
+                            <id>ProcessWikidataLinks</id>
+                            <mainClass>org.dbpedia.extraction.scripts.ProcessWikidataLinks</mainClass>
                             <jvmArgs>
                                 <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xms1024m</jvmArg>
+                                <jvmArg>-Xmx4096m</jvmArg><!-- processing all languages takes about 4G -->
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
                             </jvmArgs>
-                            <!-- ../run MapSubjectUris /home/dbpedia interlanguage-links-same-as labels,short-abstracts,long-abstracts -en-uris .nt.gz dbpedia.org 10000- -->
+                        </launcher>
+                        <launcher>
+                            <id>CanonicalizeUris</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CanonicalizeUris</mainClass>
+                            <jvmArgs><jvmArg>-server</jvmArg>
+                            <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg></jvmArgs>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx8G</jvmArg><!-- processing languages in parallel takes a lot of space -->
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
+                            </jvmArgs>
                         </launcher>
                         <launcher>
                             <id>ResolveTransitiveLinks</id>
@@ -93,18 +133,74 @@
                                 <jvmArg>-server</jvmArg>
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                             </jvmArgs>
-                            <!-- ../run ResolveTransitiveLinks /home/dbpedia redirects transitive-redirects .nt.gz 10000- -->
                         </launcher>
                         <launcher>
                             <id>MapObjectUris</id>
                             <mainClass>org.dbpedia.extraction.scripts.MapObjectUris</mainClass>
                             <jvmArgs>
                                 <jvmArg>-server</jvmArg>
+                                <jvmArg>-Xmx8G</jvmArg><!-- processing languages in parallel takes a lot of space -->
+                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>DecodeHtmlText</id>
+                            <mainClass>org.dbpedia.extraction.scripts.DecodeHtmlText</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                             </jvmArgs>
-                            <!-- ../run MapObjectUris /home/dbpedia transitive-redirects infobox-properties,mappingbased-properties,... -redirected .nt.gz 10000- -->
-                            <!-- the following should be redirected (as of 2012-07-11) -->
-                            <!-- disambiguations,infobox-properties,mappingbased-properties,page-links,persondata,topical-concepts -->
+                        </launcher>
+                        <launcher>
+                            <id>DecodeHtmlEntities</id>
+                            <mainClass>org.dbpedia.extraction.scripts.DecodeHtmlEntities</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>RecodeUris</id>
+                            <mainClass>org.dbpedia.extraction.scripts.RecodeUris</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>FixNTriplesEncoding</id>
+                            <mainClass>org.dbpedia.extraction.scripts.FixNTriplesEncoding</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>CountTypes</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CountTypes</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>CreateDownloadPage</id>
+                            <mainClass>org.dbpedia.extraction.scripts.CreateDownloadPage</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>UnmodifiedFeederCacheGenerator</id>
+                            <mainClass>org.dbpedia.extraction.scripts.UnmodifiedFeederCacheGenerator</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
                         </launcher>
                     </launchers>
                 </configuration>
@@ -118,18 +214,6 @@
         <dependency>
             <groupId>org.dbpedia.extraction</groupId>
             <artifactId>core</artifactId>
-        </dependency>
-
-        <!-- TODO: find a version in a public repo. -->
-        <dependency>
-            <groupId>org.openrdf</groupId>
-            <artifactId>openrdf</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
         </dependency>
 
     </dependencies>
